# sprint-sync

./: .env.example  .gitignore  Dockerfile  README.md  Sprint Project Estimation and Strategy.csv  pyproject.toml
.github/workflows/: ci.yml
app/: logging_config.py  main.py  middleware.py
app/auth/: dependencies.py  jwt_handler.py
app/routes/: resumes.py  suggest.py  tasks.py  users.py
app/services/: ai_services.py  prompts.py  retrieval.py  s3_bucket.py  supabase_client.py
app/supabase/migrations/: get_userid_ordered.sql  initial_schema.sql  keyword_search.sql  vector_search.sql
tests/: test_suggest.py
