[project]
name = "sprint-sync"
version = "0.1.0"
description = "Hiring Task"
authors = [
    {name = "aneesarom",email = "speaktoanees@gmail.com"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
