[project]
name = "sprint-sync"
version = "0.1.0"
description = "Hiring Task"
authors = [
    {name = "aneesarom",email = "speaktoanees@gmail.com"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "tavily-python (>=0.7.21,<0.8.0)",
    "langsmith (>=0.7.6,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
